fix: bottom border was visible

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -2,7 +2,8 @@ $border: 0.2rem solid white;
 $border-radius: 1rem;
 
 .card {
-    height: 3.5rem;
+    height: 3.4rem;
+    border-bottom: 0;
     font-weight: bold;
     width: 30%;
     background-color: lightgray;
@@ -12,13 +13,18 @@ $border-radius: 1rem;
     border-top: $border;
     border-left: $border;
     border-right: $border;
-    margin-top: -0.6rem;
+    margin-top: -1.2rem;
     margin-left: 0.1rem;
     margin-right: 0.1rem;
     font-size: 1rem;
     box-shadow: 7px -2px 10px 1px #282c34;
+    display: flex;
 }
 
+.value {
+    width: 100%;
+    margin-top: -1.3rem;
+}
 
 .card_yellow {
     background-color: #fff4bf; 
