--- a/src/components/city/city.scss
+++ b/src/components/city/city.scss
@@ -14,7 +14,7 @@
     align-self: center;
     flex-wrap: wrap;
     // this should change based on breakpoint 12/16/32
-    max-height: 12rem;
+    max-height: 11rem;
 }
 
 .city_yellow {
